--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.2",
     "next": "^12.0.8",
+    "postcss": "^8.4.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
     "eslint": "8.7.0",
