--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^6.2.1",
     "autoprefixer": "^10.4.2",
     "next": "^12.0.8",
     "postcss": "^8.4.6",
